--- a/oikonomos-dashboard/src/components/Sidebar.module.css
+++ b/oikonomos-dashboard/src/components/Sidebar.module.css
@@ -4,13 +4,14 @@
   flex-direction: column;
   width: 250px;
   height: 100vh;
-  background-color: var(--cinza-elemento);
+  background-color: var(--preto-fundo);
   border-right: 1px solid var(--borda-sutil);
   padding: 20px;
   position: fixed;
   top: 0;
   left: 0;
 }
+
 
 /* Regra do topo ajustada para centralizar apenas o título */
 .logo {
@@ -68,8 +69,8 @@
 
 /* Nova regra para a logo no rodapé */
 .footerLogo {
-  width: 60px; /* Reduzido de 100px para 60px */
-  height: 60px; /* Reduzido de 100px para 60px */
+  width: 250px; /* Aumente para o tamanho desejado */
+  height: 250px; /* Mantenha o mesmo valor da largura para a proporção */
   opacity: 0.7;
   transition: opacity 0.2s;
 }
